--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "project",
-  "dependencies": {},
+  "name": "memepicker",
   "devDependencies": {
     "vite": "latest"
   },
@@ -9,5 +8,18 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  }
+  },
+  "description": "meme",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JacksonDynamics/MemePicker.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JacksonDynamics/MemePicker/issues"
+  },
+  "homepage": "https://github.com/JacksonDynamics/MemePicker#readme"
 }
